# ros-prolog

./: README.md  changelog
prolog/: CMakeLists.txt  package.xml
prolog/include/prolog/: Bindings.h  Exceptions.h  Parser.h  Term.h  Value.h  Value.tpp
prolog/src/: Bindings.cpp  Exceptions.cpp  Parser.cpp  Term.cpp  Value.cpp
prolog_client/: CMakeLists.txt  nodelet_plugins.xml  package.xml
prolog_client/config/: interactive_client.yaml
prolog_client/include/prolog_client/: Client.h  ClientNode.h  InteractiveClient.h  Query.h  QueryProxy.h  ServiceClient.h  Solutions.h
prolog_client/launch/: interactive_client_node.launch
prolog_client/src/: Client.cpp  ClientNode.cpp  InteractiveClient.cpp  Query.cpp  QueryProxy.cpp  ServiceClient.cpp  Solutions.cpp  interactive_client_node.cpp
prolog_common/: CMakeLists.txt  package.xml
prolog_common/include/prolog_common/: Atom.h  Bindings.h  Clause.h  Compound.h  Deserializer.h  Fact.h  Float.h  Integer.h  List.h  Number.h  Program.h  Query.h  Rule.h  Serializer.h  Solution.h  Solution.tpp  Term.h  Variable.h
prolog_common/src/: Atom.cpp  Bindings.cpp  Clause.cpp  Compound.cpp  Deserializer.cpp  Fact.cpp  Float.cpp  Integer.cpp  List.cpp  Number.cpp  Program.cpp  Query.cpp  Rule.cpp  Serializer.cpp  Solution.cpp  Term.cpp  Variable.cpp
prolog_msgs/: CMakeLists.txt  package.xml
prolog_msgs/srv/: AbortQuery.srv  Finish.srv  GetAllSolutions.srv  GetNextSolution.srv  HasSolution.srv  NextSolution.srv  OpenQuery.srv  Query.srv  StartQuery.srv
prolog_serialization/: CMakeLists.txt  package.xml
prolog_serialization/include/prolog_serialization/: Deserializer.h  JSONDeserializer.h  JSONSerializer.h  PrologSerializer.h  Serializer.h
prolog_serialization/src/: Deserializer.cpp  JSONDeserializer.cpp  JSONSerializer.cpp  PrologSerializer.cpp  Serializer.cpp
prolog_server/: CMakeLists.txt  nodelet_plugins.xml  package.xml
prolog_server/config/: mt_server.yaml
prolog_server/include/prolog_server/: MultiThreadedServer.h  Server.h  ServerNode.h  ServiceServer.h  ThreadedQuery.h
prolog_server/launch/: mt_server_node.launch  mt_server_nodelet.launch
prolog_server/src/: MultiThreadedServer.cpp  Server.cpp  ServerNode.cpp  ServiceServer.cpp  ThreadedQuery.cpp  mt_server_node.cpp  server_node.cpp
prolog_swi/: CMakeLists.txt  package.xml
prolog_swi/include/prolog_swi/: Bindings.h  Context.h  Engine.h  Exception.h  Frame.h  Query.h  Term.h
prolog_swi/src/: Bindings.cpp  Context.cpp  Engine.cpp  Exception.cpp  Frame.cpp  Query.cpp  Term.cpp
prolog_test/: CMakeLists.txt  package.xml
prolog_test/include/prolog_test/: CurrentAtomQuery.h  FileSearchPathQuery.h
prolog_test/src/: CurrentAtomQuery.cpp  FileSearchPathQuery.cpp
prolog_test/test/: ContextTest.cpp  EngineTest.cpp  ExceptionTest.cpp  FrameTest.cpp  QueryTest.cpp  SerializationTest.cpp  SolutionTest.cpp
semantic_map_msgs/: package.xml
