<package>
  <name>prolog_serialization</name>
  <version>0.0.1</version>
  <description>
    Prolog serialization library for ROS.
  </description>
  <maintainer email="ralf.kaestner@gmail.com">Ralf Kaestner</maintainer>

  <license>LGPL</license>

  <author>Ralf Kaestner</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>prolog_common</build_depend>
  <build_depend>roscpp</build_depend>

  <run_depend>prolog_common</run_depend>
  <run_depend>roscpp</run_depend>
</package>
