<package>
  <name>prolog_server</name>
  <version>0.0.1</version>
  <description>
    Prolog server for ROS.
  </description>
  <maintainer email="ralf.kaestner@gmail.com">Ralf Kaestner</maintainer>

  <license>LGPL</license>

  <author>Ralf Kaestner</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>nodelet</build_depend>
  <build_depend>prolog_common</build_depend>
  <build_depend>prolog_msgs</build_depend>
  <build_depend>prolog_serialization</build_depend>
  <build_depend>prolog_swi</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roscpp_nodewrap</build_depend>

  <run_depend>nodelet</run_depend>
  <run_depend>prolog_common</run_depend>
  <run_depend>prolog_msgs</run_depend>
  <run_depend>prolog_serialization</run_depend>
  <run_depend>prolog_swi</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roscpp_nodewrap</run_depend>
  
  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml"/>
  </export>
</package>
